--- a/11.18.html
+++ b/11.18.html
@@ -4,82 +4,86 @@
 		<title>Sveiki</title>
 		<meta charset="utf-8">
 		<style>
-                   * {
+        * {
 			box-sizing: border-box;
+		}
+		@media only screen and (max-width: 1200px) {
+        .il {display: block;}
+        }
+		@media only screen and (min-width: 1200px) {
+        .il {display:inline-block;}
+		}
+		body {
+			background-color: tomato;
+			border: 10px solid gold;
+			margin: 0;
+		}
+		header {
+			background-color: palevioletred;
+			text-align: center;
+			font-family: sans-serif;
+			font-size: 2em;
+			padding : 50px;
+		}
+		.menu-top {
+			padding: 20px;
+		}
+		ul {
+			margin: 0;
+			padding: 10px;
+			text-align: center;
+			font-size: 2em
+		}
+        ul li {
+           display: inline-block;
+		   margin: 10px;
+		}
+		.menu-side {
+			background-color: palevioletred;
+			padding: 10px;
+		}
+		/* unvisited link */
+			a:link {
+			color: red;
 			}
-			body {
-				background-color: tomato;
-				border: 10px solid gold;
-				margin: 0;
+			/* visited link */
+			a:visited {
+			color: lightpink;
 			}
-			header {
-				background-color: palevioletred;
-				text-align: center;
-				font-family: sans-serif;
-				font-size: 20px;
-				padding: 50px;
-				height: 100px;
+			/* mouse over link */
+			a:hover {
+			color: hotpink;
 			}
-			.menu-top {
-				padding: 20px;
+			/* selected link */
+			a:active {
+			color: black;
 			}
-			ul {
-				margin: 0;
-				padding: 10px;
-				text-align: center;
-				font-size: 30px;
-			}
-			li {
-			   display: inline-block;
-				   margin: 10px;
-			}
-			.il {
-				display: block;
-				font-size: 30px;
-			}
-			.menu-side {
-				background-color: palevioletred;
-				padding: 10px;
-			}
-			/* unvisited link */
-				a:link {
-				color: red;
-				}
-				/* visited link */
-				a:visited {
-				color: lightpink;
-				}
-				/* mouse over link */
-				a:hover {
-				color: hotpink;
-				}
-				/* selected link */
-				a:active {
-				color: black;
-				}
-			main {
-				padding: 10px;
-				text-align: justify;
-				font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-				font-size: 20px;
-				margin: 3px;
-			}
-			h1 {
-				text-align: center;
-			}
-			form {
-				float: left;
-			}
-			footer {
-				background-color: palevioletred;
-				padding: 30px;
-			}
-			#a {
-				font-size: 25px;
-				color: midnightblue;
-				font-family: Geneva, Arial, Helvetica, sans-serif;
-			}
-	 	</style>
+		main {
+			padding: 10px;
+			text-align: justify;
+			font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+			font-size: 2em;
+			margin: 3px;
+		}
+		h1 {
+			text-align: center;
+		}
+		form {
+			float: left;
+		}
+		footer {
+			background-color: palevioletred;
+			padding: 2rem;
+		}
+		#a {
+			font-size: 2rem;
+			color: midnightblue;
+			font-family: Geneva, Arial, Helvetica, sans-serif;
+		}
+		.logo {
+			font-size: 3rem;
+		}
+	</style>
 	</head>
 		<body>
 			<header id="header">
@@ -94,12 +98,12 @@
 				</ul>
 			</nav>
 			<nav class="menu-side">
-			     <ol class="ul">
+			     <ul class="ul">
 					<li class="il"><a href="">Subpage</a></li>
 					<li class="il"><a href="">Subpage</a></li>
 					<li class="il"><a href="">Subpage</a></li>
 					<li class="il"><a href="">Subpage</a></li>
-			     </ol>
+			     </ul>
 			</nav>
 			<main id="content">
 				<h1>Antraštė</h1>
@@ -153,11 +157,4 @@
 				</form>
 			</footer>
 	</body>
-
-
-
-
-
-
-
 </html>
